[package]
name = "smoltcp-rmodbus"
description = "A smoltcp implementation for rmodbus."
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3.6", optional = true }
heapless = "0.8.0"
rmodbus = { version = "0.9.3", default-features = false, features = [
    "heapless",
] }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "socket-tcp",
    "proto-ipv4",
    "medium-ethernet",
] }

[features]
defmt-03 = ["dep:defmt", "smoltcp/defmt", "heapless/defmt-03", "rmodbus/defmt"]
